# My-Backend

./:  Dropzone with Python 3  .gitignore  file.py  handleUpload.py  main.py  pyproject.toml  readme.md  table.py  tempx.txt  test.http  test.py
.temp/: file.py
db/: test.db
frontend/: package.json
frontend/src/: .dummy  App.css  App.tsx
frontend/src/components/: dropzone.tsx  table.tsx
frontend/src/function/: checksum.ts
templates/: deprecated.html  item.html
