[tool.poetry]
name = "back"
version = "0.1.0"
description = ""
authors = ["Billy"]

[tool.poetry.scripts]
mulai = "main:start"

[tool.poetry.dependencies]
python = "^3.9.2"
fastapi = {extras = ["all"], version = "^0.63.0"}
SQLAlchemy = "^1.4.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

